kubernetes/main/apps/test/networkpolicy.yaml
# https://github.com/cilium/cilium/issues/42046
# https://github.com/cilium/cilium/issues/42594
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-ingress-test
  namespace: test
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-test-twitter
  namespace: test
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cilium-debugging-dns-alpine
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: matrix-synapse
      toPorts:
        - ports:
            - port: "8008"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.x.com"
        - matchPattern: "*.twitter.com"
        - matchPattern: "*.twimg.com"
        - matchPattern: "api.x.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
