kubernetes/main/apps/test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: &app cilium-debugging-dns-alpine
  namespace: test
  labels:
    app.kubernetes.io/name: *app
spec:
  containers:
    - name: cilium-debugging-dns
      image: alpine/curl
      command: ["/bin/sh", "-c", "--"]
      args: ["while true; do sleep 3600; done;"]
# kubectl exec -n kube-system ds/cilium -- hubble observe --namespace test --verdict DROPPED -f
